# tipp10

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tipp10.desktop  tipp10.pro  tipp10.qrc
def/: defines.h  errordefines.h
games/: abcrainwidget.cpp  abcrainwidget.h  charball.cpp  charball.h
release/help/de/: index.html
release/help/de/content/: about.html  introduction.html  license.html  results.html
release/help/en/: index.html
release/help/en/content/: about.html  introduction.html  license.html  results.html
sql/: chartablesql.cpp  chartablesql.h  connection.h  keyboardsql.cpp  keyboardsql.h  lessontablesql.cpp  lessontablesql.h  startsql.cpp  startsql.h  trainingsql.cpp  trainingsql.h
translations/: tipp10_de.ts  tipp10_en.ts
widget/: companylogo.cpp  companylogo.h  errormessage.cpp  errormessage.h  evaluationwidget.cpp  evaluationwidget.h  fingerwidget.cpp  fingerwidget.h  helpbrowser.cpp  helpbrowser.h  illustrationdialog.cpp  illustrationdialog.h  illustrationimage.cpp  illustrationimage.h  keyboard.cpp  keyboard.h  lessondialog.cpp  lessondialog.h  lessonprintdialog.cpp  lessonprintdialog.h  lessonresult.cpp  lessonresult.h  mainwindow.cpp  mainwindow.h  numpad.cpp  numpad.h  progressionwidget.cpp  progressionwidget.h  regexpdialog.cpp  regexpdialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialogx.cpp  settingsdialogx.h  settingspages.cpp  settingspages.h  startwidget.cpp  startwidget.h  statusbar.cpp  statusbar.h  (+6 more)
